force-app/main/default/objects/Contract_Audit__b/Contract_Audit__b.object-meta.xml
<CustomObject>
    <label>Contract Audit</label>
    <pluralLabel>Contract Audits</pluralLabel>
</CustomObject>