force-app/main/default/objects/Contract_Audit__b/fields/Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_Time__c</fullName>
    <label>Change Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>