force-app/main/default/objects/Contract_Audit__b/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>